# nexum-protocol-mvp

./: Anchor.toml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json
App/: Package.json
App/src/App/: layout.tsx
app/src/app/: global.css  page.tsx
app/src/components/: CreateTaskModal.tsx  ProfilePanel.tsx  TaskCard.tsx  WalletProvider.tsx
app/src/types/: index.ts
docs/: ARCHITECTURE.md  DEPLOYMENT.md  TOKENOMICS.md
programs/nexum/: Cargo.toml
programs/nexum/src/: lib.rs
tests/: nexum.ts
