[package]
name = "nexum"
version = "0.1.0"
description = "NEXUM Protocol — Decentralized micro-task marketplace on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nexum"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
